--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
 
-    
+    <canvas id="bevy-canvas" tabIndex="0" autofocus height="700" width="1000"></canvas>
     <input type="file" id="input_file" name="File" accept=".gco, .gcode" style="visibility: hidden">
     <span id="file_content" type="hidden" value="">
 
